# NanoMesh

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  circle.yml  mamafile.py  shippable.yml
Nano/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Mesh_Fbx.cpp  Mesh_Obj.cpp
csharp/NanoMeshCSharpTests/: NanoMesh.cs  NanoMeshCSharpTests.csproj  NanoMeshCSharpTests.sln  Program.cs
csharp/NanoMeshCSharpTests/Properties/: AssemblyInfo.cs
include/Nano/: Mesh.h  MeshLoader.h  mesh.natvis
src/: InternalConfig.h  Mesh.cpp  MeshLoader.cpp  Mesh_Fbx.cpp  Mesh_Obj.cpp  Mesh_Txt.cpp
src/FBX/: mamafile.py
test/: CMakeLists.txt  test_mesh_api.cpp  test_mesh_loader_api.cpp
